# spinlab

./: .gitattributes  .gitignore  CLAUDE.md  DESIGN.md  README.md  config.example.yaml  config.yaml  future.txt  practice-optimizer-model-spec.md  pyproject.toml  spinlib.sln
.claude/: settings.json
.claude/commands/: execute-plan.md
.claude/skills/: execute-plan.md
docs/: ARCHITECTURE.md  GLOSSARY.md  model-improvements-spec.md  multi-model-spec.md
docs/superpowers/archive/: 2026-03-27-multi-model-estimator.md
docs/superpowers/plans/: 2026-03-11-step-a-polish.md  2026-03-11-step3-reference-capture.md  2026-03-11-step4-practice-loop.md  2026-03-12-dashboard-poc.md  2026-03-12-kalman-model.md  2026-03-12-session-manager.md  2026-03-13-dashboard-mode-control.md  2026-03-13-multi-game-polish.md  2026-03-13-multi-game-support.md  2026-03-13-session-manager-extraction.md  2026-03-23-checkpoint-segments.md  2026-03-24-dashboard-restructure.md  2026-03-24-input-recording-replay.md  2026-03-27-integration-tests.md  2026-04-01-model-output-v2.md  2026-04-02-architectural-cleanup.md  2026-04-02-cold-fill-phase.md  2026-04-02-config-cleanup.md  2026-04-02-scheduler-refactor.md  2026-04-02-weighted-allocator-mix.md  2026-04-04-typescript-vite-migration.md  2026-04-05-architecture-improvements.md  2026-04-05-attempt-invalidation.md  2026-04-05-dashboard-segments-view.md  2026-04-05-practice-session-savings.md  2026-04-05-segment-conditions-foundation.md  2026-04-06-full-stack-smoke-tests.md  2026-04-06-polish-round-2.md  2026-04-06-segment-history-graph.md  2026-04-07-ref-as-seed.md  2026-04-07-speed-run-mode.md  2026-04-07-vite-dev-server-integration.md  2026-04-10-test-quality-improvements.md  2026-04-11-replay-fixture.md  2026-04-13-capture-consolidation.md  2026-04-13-cleanup-bundle.md  2026-04-13-test-reorg.md  2026-04-14-status-enum-pruning.md  2026-04-20-codebase-hygiene.md  2026-04-21-typed-event-pipeline.md
docs/superpowers/specs/: 2026-03-11-spinlab-roadmap-and-step-a-design.md  2026-03-11-step3-reference-capture-design.md  2026-03-11-step4-practice-loop-mvp-design.md  2026-03-12-dashboard-design.md  2026-03-12-kalman-model-design.md  2026-03-12-session-manager-design.md  2026-03-13-dashboard-mode-control-design.md  2026-03-13-multi-game-support-design.md  2026-03-13-session-manager-extraction-design.md  (+30 more)
frontend/: index.html  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
frontend/src/: api-contract.test.ts  api.test.ts  api.ts  app.ts  format.test.ts  format.ts  header.ts  manage.ts  model-api.ts  model-logic.test.ts  model-logic.ts  model-render.ts  model.ts  savings-panel.test.ts  segment-detail.test.ts  segment-detail.ts  segments-view.test.ts  segments-view.ts  tuning-sync.test.ts  types.ts
lua/: addresses.lua  death_spike.lua  json.lua  overlay.lua  poke_engine.lua  spinlab.lua  spinrec.lua
python/spinlab/: capture.py  capture_controller.py  cli.py  cold_fill_controller.py  condition_registry.py  config.py  dashboard.py  db.py  draft_manager.py  errors.py  manifest.py  models.py  orchestrator.py  practice.py  protocol.py  reference_capture.py  reference_seeding.py  romid.py  scheduler.py  session_manager.py  speed_run.py  spinrec.py  sse.py  state_builder.py  system_state.py  tcp_manager.py  vite.py
python/spinlab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
reference/kaizosplits-main/: Kaizo.asl
scripts/: bootstrap-sandbox.sh  coverage.sh  dedicated_coverage.py  finish-pr.sh  launch.bat  launch.sh  plan-preflight.sh  spinlab.ahk  test_poc.py
tests/: conftest.py  factories.py  test_allocators.py  test_attempts_conditions.py  test_attempts_invalidation.py  test_capture.py  test_capture_controller.py  test_capture_with_conditions.py  test_cli.py  test_cli_logging.py  test_cold_fill.py  test_cold_fill_integration.py  test_condition_registry.py  test_config.py  test_dashboard.py  test_dashboard_integration.py  test_dashboard_references.py  test_db_attempts.py  test_db_dashboard.py  test_db_references.py  test_draft_lifecycle.py  test_estimator_params.py  test_estimator_sanity.py  test_exp_decay.py  test_fake_tcp.py  test_invalidate_flow.py  test_kalman.py  test_mix_allocator.py  test_model_a.py  test_model_b.py  test_model_output.py  test_models.py  test_models_enums.py  test_multi_game.py  test_orchestrator.py  test_orchestrator_state.py  test_practice.py  test_practice_coverage.py  test_protocol.py  test_reference_capture.py  (+18 more)
tests/integration/: README.md  addresses.py  conftest.py  poke_parser.py  test_frontend_smoke.py  test_lua_conditions.py  test_poke_parser.py  test_replay_fixture.py  test_smoke.py  test_transitions.py
tests/unit/: test_condition_registry.py  test_condition_registry_startup.py  test_dashboard_integration.py  test_errors.py  test_invalidate_flow.py  test_models_enums.py  test_multi_game.py  test_practice.py  test_practice_coverage.py  test_replay.py  test_scheduler_fallback.py  test_segment_variants.py  test_segments_is_primary.py  test_session_manager.py  test_session_manager_conditions.py  test_speed_run_mode.py  test_state_builder.py  test_system_state.py  test_vite.py
(+74 files in other folders)
