[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spinlab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6,<7", "fastapi>=0.115,<1", "uvicorn>=0.34,<1", "numpy>=2,<3", "scipy>=1.14,<2"]

[project.optional-dependencies]
# "requests" is imported at module-import time by tests/integration/conftest.py.
# pytest imports every conftest.py during collection — even when the integration
# tests would be skipped by marker — so requests must be installed for the fast
# suite to even collect. Without it, a clean `pip install -e ".[dev]"` appears
# to install successfully but `pytest -m "not (emulator or slow or frontend)"`
# fails with ModuleNotFoundError at collection time.
dev = ["pytest", "pytest-asyncio", "pytest-cov", "httpx", "requests", "playwright>=1.48", "pytest-playwright>=0.5"]

[project.scripts]
spinlab = "spinlab.cli:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "emulator: requires Mesen2 headless (--testRunner)",
    "slow: tests with real waits or timeouts (>500ms)",
    "frontend: requires built frontend (cd frontend && npm run build)",
]

[tool.coverage.run]
source = ["spinlab"]
data_file = "coverage/.coverage"
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "coverage/html"
