[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spinlab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6,<7", "fastapi>=0.115,<1", "uvicorn>=0.34,<1", "numpy>=2,<3", "scipy>=1.14,<2"]

[project.optional-dependencies]
# "requests" is imported at module-import time by tests/integration/conftest.py.
# pytest imports every conftest.py during collection — even when the integration
# tests would be skipped by marker — so requests must be installed for the fast
# suite to even collect. Without it, a clean `pip install -e ".[dev]"` appears
# to install successfully but `pytest -m "not (emulator or slow or frontend)"`
# fails with ModuleNotFoundError at collection time.
dev = ["pytest", "pytest-asyncio", "pytest-cov", "httpx", "requests", "playwright>=1.58", "pytest-playwright>=0.7"]

[project.scripts]
spinlab = "spinlab.cli:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "emulator: requires Mesen2 headless (--testRunner)",
    "slow: tests with real waits or timeouts (>500ms)",
    "frontend: requires built frontend (cd frontend && npm run build)",
]

[tool.coverage.run]
source = ["spinlab"]
data_file = "coverage/.coverage"
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "coverage/html"

[tool.pyright]
pythonVersion = "3.11"
include = ["python"]
# Side-effect-only imports used by registries (estimators, allocators)
reportUnusedImport = false

[tool.ruff]
src = ["python"]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line length — not bulk-reformatting existing code
]
# F401: side-effect imports power the estimator/allocator registries
# E402: route modules configure logging before imports (intentional)
per-file-ignores = { "python/spinlab/estimators/__init__.py" = ["F401"], "python/spinlab/allocators/__init__.py" = ["F401"], "python/spinlab/routes/*.py" = ["E402"], "python/spinlab/scheduler.py" = ["E402"] }
